[metadata]
name = async-lru
version = attr: async_lru.__version__
url = https://github.com/aio-libs/async-lru
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: GitHub Actions = https://github.com/aio-libs/async-lru/actions
  GitHub: repo = https://github.com/aio-libs/async-lru
description = Simple LRU cache for asyncio
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = MIT License
license_files =
  LICENSE
classifiers =
  License :: OSI Approved :: MIT License

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

keywords =
  asyncio
  lru
  lru_cache

[options]
python_requires = >=3.9
packages = find:

install_requires =
  typing_extensions>=4.0.0; python_version<"3.11"

[options.package_data]
* =
  py.typed


[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
extend-select = B950
ignore = N801,N802,N803,E252,W503,E133,E203,E501

[coverage:run]
branch = True
omit = site-packages

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2

known_first_party=async_lru

[tool:pytest]
addopts= -s --keep-duplicates --cache-clear --verbose --no-cov-on-fail --cov=async_lru --cov=tests/ --cov-report=term --cov-report=html
filterwarnings =
    error
testpaths = tests/
junit_family=xunit2
asyncio_mode=auto
timeout=15
xfail_strict = true

[mypy]
strict=True
pretty=True
packages=async_lru, tests
